--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ dependencies = [
     "scikit-learn==1.3.1",
     "pandas==2.0.3",
     "timm==0.4.12",
-    "numpy==1.23.1",
+    "numpy",
     "einops==0.7.0",
     "fvcore==0.1.5.post20221221",
     "transformers==4.34.0",
@@ -46,7 +46,7 @@ dependencies = [
     "deepspeed==0.10.3",
     "wandb==0.15.12",
     "infinibatch==0.1.1",
-    "gradio==3.42.0",     
+    "gradio",     
     "openai-whisper",    
 ]
 
